--- a/app/src/main/res/layout/activity_edit_part.xml
+++ b/app/src/main/res/layout/activity_edit_part.xml
@@ -16,7 +16,8 @@
         android:paddingTop="10dp"
         android:text="@string/part_details"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="35sp"
+        android:textSize="32sp"
+        android:paddingBottom="1dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -331,7 +332,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
                         android:layout_marginBottom="30dp"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="25dp"
                         android:text="@string/negotiable"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="18sp"
