--- a/app/src/main/res/layout/activity_parts_categories.xml
+++ b/app/src/main/res/layout/activity_parts_categories.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:text="@string/parts_categories"
         android:textStyle="bold"
-        android:textSize="35sp"
+        android:textSize="32sp"
+        android:paddingBottom="1dp"
         android:paddingStart="53dp"
         android:paddingTop="10dp"
         android:textColor="@color/colorPrimaryDark"
