--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -17,7 +17,8 @@
         android:paddingTop="10dp"
         android:text="@string/payment"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="35sp"
+        android:textSize="32sp"
+        android:paddingBottom="1dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
