--- a/app/src/main/res/layout/activity_add_parts.xml
+++ b/app/src/main/res/layout/activity_add_parts.xml
@@ -16,7 +16,8 @@
         android:paddingTop="10dp"
         android:text="@string/add_part"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="35sp"
+        android:textSize="32sp"
+        android:paddingBottom="1dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
