--- a/app/src/main/res/layout/activity_manage_parts.xml
+++ b/app/src/main/res/layout/activity_manage_parts.xml
@@ -15,7 +15,8 @@
         android:paddingTop="10dp"
         android:text="@string/parts"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="35sp"
+        android:textSize="32sp"
+        android:paddingBottom="1dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
