--- a/app/src/main/res/layout/activity_part_details.xml
+++ b/app/src/main/res/layout/activity_part_details.xml
@@ -14,9 +14,10 @@
         android:background="@color/colorAccent"
         android:paddingStart="52dp"
         android:paddingTop="10dp"
+        android:paddingBottom="1dp"
         android:text="@string/part_details"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="35sp"
+        android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
