--- a/app/src/main/res/layout/activity_pay_completion.xml
+++ b/app/src/main/res/layout/activity_pay_completion.xml
@@ -14,9 +14,10 @@
         android:background="@color/themeColor"
         android:paddingStart="52dp"
         android:paddingTop="10dp"
-        android:text="@string/payment_detials"
+        android:text="@string/payment_details"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="35sp"
+        android:textSize="32sp"
+        android:paddingBottom="1dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
