--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -18,7 +18,8 @@
         android:elevation="2dp"
         android:text="@string/profile"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="35sp"
+        android:textSize="32sp"
+        android:paddingBottom="1dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
