--- a/app/src/main/res/layout/rating_dialog.xml
+++ b/app/src/main/res/layout/rating_dialog.xml
@@ -56,6 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="2dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:elevation="4dp"
@@ -67,6 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
+            android:layout_marginStart="2dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:elevation="4dp"
