--- a/app/src/main/res/layout/activity_bottom_nav_menu.xml
+++ b/app/src/main/res/layout/activity_bottom_nav_menu.xml
@@ -28,9 +28,9 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="15dp"
+        android:paddingBottom="15dp"
         android:background="@color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
