--- a/app/src/main/res/layout/activity_add_parts.xml
+++ b/app/src/main/res/layout/activity_add_parts.xml
@@ -306,6 +306,25 @@
                     android:inputType="numberDecimal" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputAddPartDescription"
+                style="@style/parent"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="30dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textInputAddPartPrice">
+
+                <EditText
+                    android:id="@+id/addPartDescription"
+                    style="@style/modifiedEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/add_part_description"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/addPartButton"
                 style="@style/loginButton"
@@ -317,7 +336,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textInputAddPartPrice" />
+                app:layout_constraintTop_toBottomOf="@id/textInputAddPartDescription" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
