--- a/app/src/main/res/layout/row_diagnostics.xml
+++ b/app/src/main/res/layout/row_diagnostics.xml
@@ -18,6 +18,7 @@
         android:layout_gravity="center_horizontal">
 
         <TextView
+            android:id="@+id/dateTimeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="YYYY-MM-DD H:M:S"
