--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_bk_color"
-    tools:context=".ChangePasswordActivity">
+    tools:context=".View.Activities.ChangePasswordActivity">
 
     <TextView
         android:id="@+id/part_change_pass"
