--- a/app/src/main/res/layout/activity_add_parts.xml
+++ b/app/src/main/res/layout/activity_add_parts.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_bk_color"
-    tools:context=".AddPartsActivity">
+    tools:context=".View.Activities.AddPartsActivity">
 
     <TextView
         android:id="@+id/addPartTitle"
