--- a/app/src/main/res/layout/activity_bottom_nav_menu.xml
+++ b/app/src/main/res/layout/activity_bottom_nav_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BottomNavMenuActivity">
+    tools:context=".View.Activities.BottomNavMenuActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
