--- a/app/src/main/res/layout/activity_part_details.xml
+++ b/app/src/main/res/layout/activity_part_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".PartDetailsActivity">
+    tools:context=".View.Activities.PartDetailsActivity">
 
     <TextView
         android:id="@+id/part_details_title"
