--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".PasswordResetActivity"
+    tools:context=".View.Activities.PasswordResetActivity"
     android:background="@color/login_bk_color"
     android:focusableInTouchMode="true"
     android:gravity="center"
