--- a/app/src/main/res/layout/activity_pay_completion.xml
+++ b/app/src/main/res/layout/activity_pay_completion.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PayCompletionActivity">
+    tools:context=".View.Activities.PayCompletionActivity">
 
     <TextView
         android:id="@+id/paymentCompletionTitle"
