--- a/app/src/main/res/layout/fragment_mechanic.xml
+++ b/app/src/main/res/layout/fragment_mechanic.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".MechanicFragment">
+    tools:context=".View.Fragments.MechanicFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/mechanicsCardSearch"
