--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".PartsFragment">
+    tools:context=".View.Fragments.PartsFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/partsCardSearch"
