--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -370,12 +370,14 @@
                 android:id="@+id/manageparts"
                 style="@style/loginButton"
                 android:layout_marginBottom="30dp"
+                android:layout_marginStart="@dimen/loginViewsMargin"
+                android:layout_marginEnd="@dimen/loginViewsMargin"
                 android:text="@string/manage_parts"
                 android:textColor="@color/colorPrimaryDark"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintEnd_toStartOf="@id/edit"
+                app:layout_constraintStart_toEndOf="@id/pay" />
 
             <ImageButton
                 android:id="@+id/edit"
@@ -393,8 +395,7 @@
                 android:id="@+id/pay"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_gravity="bottom|end"
-                android:layout_marginEnd="20dp"
+                android:layout_marginStart="@dimen/loginViewsMargin"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/floating_bt_bg"
                 android:elevation="8dp"
