--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -40,6 +40,6 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/loginViewsMargin"
         android:text="@string/send"
-        android:onClick="resetPassword"/>
+        android:onClick="resetForgetPassword"/>
 
 </LinearLayout>
