--- a/app/src/main/res/layout/payment_def_dialog.xml
+++ b/app/src/main/res/layout/payment_def_dialog.xml
@@ -43,6 +43,7 @@
         android:text="@string/get_started_body"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/getStarted"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/loginButton"
