--- a/app/src/main/res/layout/activity_pay_completion.xml
+++ b/app/src/main/res/layout/activity_pay_completion.xml
@@ -48,7 +48,7 @@
             android:id="@+id/LTN"
             style="@style/modifiedEditText"
             android:hint="@string/ltn"
-            android:inputType="number"
+            android:inputType="text"
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
