fixed the upload image

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -383,9 +383,9 @@
                 android:id="@+id/edit"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintVertical_bias="1"
                 android:background="@drawable/floating_bt_bg"
                 android:elevation="8dp"
                 android:src="@drawable/edit_icon"
@@ -399,7 +399,7 @@
                 android:layout_height="70dp"
                 android:layout_marginStart="@dimen/loginViewsMargin"
                 android:layout_marginBottom="20dp"
-                android:layout_marginTop="48dp"
+                app:layout_constraintVertical_bias="1"
                 android:background="@drawable/floating_bt_bg"
                 android:elevation="8dp"
                 android:src="@drawable/payment_icon"
